--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,29 +6,29 @@
   </div>
   <div class="landing">
 
-      <div class="container">
+      <form id="searchBar" action="/search" method="post">
         <div class="row">
             <div class="col-xs-8 col-xs-offset-2">
                 <div class="input-group">
                     <div class="input-group-btn search-panel">
                         <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                            <span id="search_concept">Filter by</span> <span class="caret"></span>
+                            <span id="category">Filter by</span> <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" role="menu">
-                          <li><a href="#toys&amp;games">Toys &amp; Games</a></li>
+                          <li><a href="#Toys &amp; Games">Toys &amp; Games</a></li>
                           <li class="divider"></li>
                           <li><a href="#all">All departments</a></li>
                         </ul>
                     </div>
-                    <input type="hidden" name="search_param" value="all" id="search_param">
-                    <input type="text" class="form-control" name="x" placeholder="Search term...">
+                    <input type="hidden" name="queryFilter" value="all" id="queryFilter">
+                    <input type="text" class="form-control" name="queryText" placeholder="Search term...">
                     <span class="input-group-btn">
-                        <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
+                        <button class="btn btn-default submit" type="button"><span class="glyphicon glyphicon-search"></span></button>
                     </span>
                 </div>
             </div>
         </div>
-      </div>
+      </form>
 
   </div>
 </div>
