--- a/app/templates/page_template.html
+++ b/app/templates/page_template.html
@@ -30,8 +30,8 @@
       </div>
       <footer class="m-page scene_element scene_element--fadeinup">
         <div class="wrapper">
-          <p>All content &copy;2016 Rob+1</p>
-          <p class="disclaimer">under penalty of death.</p>
+          <p>All content &copy;2016 Rob Dalton</p>
+	  <p class="disclaimer">under penalty of death. <br>(just kidding)</p>
         </div>
       </footer>
     </div>
