--- a/app/templates/product.html
+++ b/app/templates/product.html
@@ -1,15 +1,19 @@
 {% extends "page_template.html" %}
 {% block content %}
 <div class="product">
-  <h3 class="title">
+  <h2 class="title">
 	  {{ product_title  }}
-  </h3>
-  <div class="ratings section">
-	  {{ product_ratings }}
+  </h2>
+  <div class="avg-rating section">
+    {{ avg_rating }}
+  </div>
+  <div class="ratings-dist section">
+    <h4>Ratings Distribution</h4>
+	  {{ ratings_dist }}
   </div>
   <div class="pos-features section">
 	<h4>Positive Features</h4>
- 	{{ pos_features }} 
+ 	{{ pos_features }}
   </div>
   <div class="neg-features section">
 	<h4>Negative Features </h4>
