--- a/app/static/assets/style.css
+++ b/app/static/assets/style.css
@@ -97,9 +97,10 @@ form#search button:focus {
     outline: none;
 }
 .search-result {
-    margin: 0 auto 1.33rem;
+    margin: 0 auto 3rem;
     width: 33%;
     min-width: 180px;
+    text-align: left;
 }
 .search-result span {
     display: block;
